2008-10-14  Douglas Gregor  <doug.gregor@gmail.com>

PR c++/37553
       * tree.c (build_type_attribute_qual_variant): Hash on the
       unqualified type, and don't overwrite an existing
       (type_hash_eq): Make the TYPE_NAME of the types significant, to
       allow distinguishing between wchar_t and its underlying type. This
       also means that we'll retain a little more typedef information.

2008-10-14  Douglas Gregor  <doug.gregor@gmail.com>

       PR c++/37553
       * g++.dg/ext/alias-canon2.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@141111 138bc75d-0d04-0410-961f-82ee72b054a4